pkg/lang/syntax/testdata/ub/lower/valid/source-factory.ub
factory: {
  description: 'Example.'
  resources: {
    hello: std.fs-file {
      path: '/tmp/hello.txt'
    }
  }
}
