pkg/lang/syntax/testdata/ub/lower/invalid/preclassified-factory.ub
description: 'Example.'

inputs: {
  message: { type: string }
}
